# python_100_days

./: pyproject.toml
beginer/: class.py  date_time.py  decorators.py  dictionary_comprehension.py  exceptions.py  file_system.py  import_package.py  list_comprehension.py  rock_paper_scissor_day_4.py
beginer/api/habits_tracker/: main.py
beginer/api/kanye/: main.py
beginer/api/socks/: main.py
beginer/api/space_station.py/: main.py
beginer/api/sunset_sunrise/: main.py
beginer/api/weather/: .env  main.py
beginer/day4/: rock_paper_scissor_day_4.py
beginer/day9/: nested_lists_dicts.py
beginer/pandas/: main.py
beginer/pomodoro/: main.py
beginer/smpt/: smpt_email.py
beginer/soup/beginer/: main.py
beginer/tkinter/: main.py  mile_to_kms.py  use_case.py
beginer/tkinter/password_manager/: data.json  main.py  pswd.txt
beginer/tkinter/pomodoro/: main.py
cs50_web/: lambda.py
cs50_web/firstapp/: settings.py
day-66-starting-files-cafe-api/: main.py  pyproject.toml
day56/: main.py  pyproject.toml
day56/templates/: elements.html  index.html
day_57/: helper.py  main.py  pyproject.toml
day_57/templates/: index.html
python_100_days/: pyproject.toml
python_100_days/beginer/: cloud.py  date_time.py  exceptions.py  file_system.py  kwargs.py
python_100_days/beginer/api/habits_tracker/: main.py
python_100_days/beginer/api/space_station.py/: main.py
python_100_days/beginer/api/sunset_sunrise/: main.py
python_100_days/beginer/soup/beginer/: main.py
