[tool.poetry]
name = "day-66-starting-files-cafe-api"
version = "0.1.0"
description = ""
authors = ["Robin Burri <robinburri@tutanota.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Flask = "2.3.2"
Flask-SQLAlchemy = "3.0.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
