[tool.poetry]
name = "day-57"
version = "0.1.0"
description = ""
authors = ["Robin Burri <robinburri@tutanota.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Flask = "^2.3.3"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
